# STD_A1_always_latest_gtest_zip-main

./: CMakeLists.txt  README.md  example.cpp
